--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Buy Me a Car</title>
+    <title>tor Baper Boro Pola</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -118,33 +118,23 @@
         <div class="container">
             <div class="row text-center car_brand_logo">
                 <div class="col-md-2 mx-auto">
-                    <div>
-                        <img src="image/ts.png" alt="">
-                    </div>
+                    <div><img src="image/ts.png" alt=""></div>
                 </div>
 
                 <div class="col-md-2 mx-auto">
-                    <div class="ms-5 img2">
-                        <img src="image/W.png" alt="">
-                    </div>
+                    <div class="ms-5 img2"><img src="image/W.png" alt=""></div>
                 </div>
 
                 <div class="col-md-2 mx-auto">
-                    <div>
-                        <img src="image/hyundri.png" alt="">
-                    </div>
+                    <div><img src="image/hyundri.png" alt=""></div>
                 </div>
 
                 <div class="col-md-2 mx-auto">
-                    <div>
-                        <img src="image/tata.png" alt="">
-                    </div>
+                    <div><img src="image/tata.png" alt=""></div>
                 </div>
 
                 <div class="col-md-2 mx-auto">
-                    <div>
-                        <img src="image/A.png" alt="">
-                    </div>
+                    <div><img src="image/A.png" alt=""></div>
                 </div>
             </div>
         </div>
@@ -153,14 +143,14 @@
     <section class="section3">
         <div class="container">
             <div class="row">
-                <h3>Trending Near You</h3>
+                <h3 class="pb-3">Trending Near You</h3>
 
                 <div class="col-md-4">
                     <div class="card">
                         <img src="image/subaru.png" alt="">
                         <div class="card-body">
                             <h5>2013 Subaru Forester</h5>
-                            <p>11 475 Miles</p>
+                            <p>11, 475 Miles</p>
                             <p>AWD <img src="image/dot.png" alt="">Lorem ipsum</p>
                             <div class="btn-group gap-2">
                                 <button class="btn Button1">$21,480</button>
@@ -169,8 +159,49 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="image/bmw.png" alt="">
+                        <div class="card-body">
+                            <h5>2010 BMW X3</h5>
+                            <p>10, 475 Miles</p>
+                            <p>BMW Liana <img src="image/dot.png" alt="">Lorem ipsum</p>
+                            <div class="btn-group gap-2">
+                                <button class="btn Button1">$36   ,480</button>
+                                <button class="btn Button2">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="image/toyotaBRZ.png" alt="">
+                        <div class="card-body">
+                            <h5>2016 Toyota BRZ</h5>
+                            <p>11, 475 Miles</p>
+                            <p>Toyota <img src="image/dot.png" alt="">Lorem ipsum</p>
+                            <div class="btn-group gap-2">
+                                <button class="btn Button1">$29,500</button>
+                                <button class="btn Button2">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
+
+    <section class="section4 container">
+        <header class="FindcarHeader">
+            <h2 class="findCar">Find car by Model</h2>
+            <p class="arrowArea">
+                1/6
+                <span><img src="image/rightArrow.png" alt=""></span>
+                <span><img src="image/leftArrow.png" alt=""></span>
+            </p>
+        </header>
     </section>
 
     <!-- Optional JavaScript -->
